--- a/Werewolves/Werewolves/Main.storyboard
+++ b/Werewolves/Werewolves/Main.storyboard
@@ -1372,6 +1372,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="ojg-Qk-98Z"/>
-        <segue reference="ssf-T3-JmC"/>
+        <segue reference="mmU-aD-GOA"/>
     </inferredMetricsTieBreakers>
 </document>
