--- a/Werewolves/Werewolves/Main.storyboard
+++ b/Werewolves/Werewolves/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kyy-hh-yPr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kyy-hh-yPr">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -689,7 +689,7 @@
             </objects>
             <point key="canvasLocation" x="971" y="1207"/>
         </scene>
-        <!--Player View Controller-->
+        <!--Player View Controller - Your Role-->
         <scene sceneID="qQC-Gy-nVG">
             <objects>
                 <viewController modalTransitionStyle="crossDissolve" id="MhZ-zv-0yj" customClass="PlayerViewController" sceneMemberID="viewController">
@@ -784,7 +784,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xUa-ih-ebt">
+                    <navigationItem key="navigationItem" title="Your Role" id="xUa-ih-ebt">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="RjW-b5-80z">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ryz-aC-ayy">
                                 <rect key="frame" x="233" y="5" width="71" height="33"/>
