--- a/Werewolves/Werewolves/Main.storyboard
+++ b/Werewolves/Werewolves/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kyy-hh-yPr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kyy-hh-yPr">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -47,7 +47,7 @@
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="iJj-J3-OF8" kind="push" identifier="CreateRoomSegue" id="HQg-46-1rG"/>
+                                    <segue destination="PSY-2I-bdp" kind="push" identifier="CreateRoomSegue" id="Uyo-Km-2OE"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GG6-GG-kJ4">
@@ -806,88 +806,6 @@
             </objects>
             <point key="canvasLocation" x="557" y="1207"/>
         </scene>
-        <!--Create Room View Controller-->
-        <scene sceneID="syL-ZQ-Hdh">
-            <objects>
-                <viewController modalTransitionStyle="crossDissolve" id="iJj-J3-OF8" customClass="CreateRoomViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="pjz-Y4-ZsG"/>
-                        <viewControllerLayoutGuide type="bottom" id="GfR-11-CmD"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Qnh-9S-igD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PHa-7d-Ynl">
-                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="uDR-sf-xOa"/>
-                                    <constraint firstAttribute="height" constant="50" id="vPW-Zg-Oji"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Done" backgroundImage="50-percent-gray.jpg">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="PSY-2I-bdp" kind="push" identifier="DeviceListSegue" id="KHO-UN-Ww4"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q0m-D1-5PT">
-                                <rect key="frame" x="40" y="386" width="240" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="xcS-0i-kN3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Your Room:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W1U-3A-Bso">
-                                <rect key="frame" x="90" y="353" width="140" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="t00-Jq-OaD"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="frontPage.png" translatesAutoresizingMaskIntoConstraints="NO" id="9aM-p3-vM0">
-                                <rect key="frame" x="40" y="105" width="240" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="240" id="UEJ-EB-7c9"/>
-                                    <constraint firstAttribute="width" secondItem="9aM-p3-vM0" secondAttribute="height" multiplier="1:1" id="o4g-nc-a3c"/>
-                                    <constraint firstAttribute="width" constant="240" id="pT5-eh-iBd"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="PHa-7d-Ynl" firstAttribute="centerX" secondItem="Q0m-D1-5PT" secondAttribute="centerX" id="4iZ-Wc-dXN"/>
-                            <constraint firstAttribute="trailing" secondItem="W1U-3A-Bso" secondAttribute="trailing" constant="90" id="7tu-57-rVl"/>
-                            <constraint firstItem="Q0m-D1-5PT" firstAttribute="top" secondItem="W1U-3A-Bso" secondAttribute="bottom" constant="3" id="8VF-gw-qqT"/>
-                            <constraint firstItem="Q0m-D1-5PT" firstAttribute="leading" secondItem="Qnh-9S-igD" secondAttribute="leading" constant="40" id="KcN-Kg-vKV"/>
-                            <constraint firstAttribute="trailing" secondItem="9aM-p3-vM0" secondAttribute="trailing" constant="40" id="TC6-qA-Q4r"/>
-                            <constraint firstAttribute="trailing" secondItem="Q0m-D1-5PT" secondAttribute="trailing" constant="40" id="URJ-Wt-s53"/>
-                            <constraint firstItem="9aM-p3-vM0" firstAttribute="leading" secondItem="Qnh-9S-igD" secondAttribute="leading" constant="40" id="Zna-Jg-eYZ"/>
-                            <constraint firstItem="Q0m-D1-5PT" firstAttribute="width" secondItem="9aM-p3-vM0" secondAttribute="width" id="inr-Zu-Bb3"/>
-                            <constraint firstItem="9aM-p3-vM0" firstAttribute="top" secondItem="pjz-Y4-ZsG" secondAttribute="bottom" constant="41" id="jKx-bW-pKu"/>
-                            <constraint firstItem="W1U-3A-Bso" firstAttribute="leading" secondItem="Qnh-9S-igD" secondAttribute="leading" constant="90" id="mPh-Ui-aEC"/>
-                            <constraint firstItem="W1U-3A-Bso" firstAttribute="top" secondItem="9aM-p3-vM0" secondAttribute="bottom" constant="8" id="qgr-2u-x1x"/>
-                            <constraint firstItem="Q0m-D1-5PT" firstAttribute="height" secondItem="W1U-3A-Bso" secondAttribute="height" id="rle-xi-IYU"/>
-                            <constraint firstItem="GfR-11-CmD" firstAttribute="top" secondItem="PHa-7d-Ynl" secondAttribute="bottom" id="y0k-ja-JOA"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="roomName" destination="Q0m-D1-5PT" id="nql-GQ-9qp"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ezx-ml-su0" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="146" y="-176"/>
-        </scene>
         <!--Turn Witch Kill View Controller-->
         <scene sceneID="Itd-cU-Gmk">
             <objects>
@@ -1316,7 +1234,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hvc-wW-p9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="557" y="-176"/>
+            <point key="canvasLocation" x="146" y="-176"/>
         </scene>
         <!--Status View Controller-->
         <scene sceneID="kxU-r1-zeK">
